syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.viniciusdev26.musicfy.grpc.user";
option java_outer_classname = "UserProto";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
}

message GetUsersRequest {
  int32 page = 1;
  int32 size = 2;
}

message GetUsersResponse {
  repeated UserDto users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 size = 4;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
}

message UserDto {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
}
